# kernel-only-GP

./: README.md  kern_gp.py  pyproject.toml  test_kern_gp.py
kern_gp/: __init__.py
