[build-system]
# Minimum requirements for the build system to execute.
# Chosen to allow versioning via git tags.
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "kern_gp"
authors = [
    {name = "Austin Tripp"},
]
description = "Gaussian processes with arbitrary kernels"
keywords = ["gaussian-process"]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]  # version is set from git tags

dependencies = [
  "jax",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit"
]

[tool.setuptools]
# Specifies location of package to install
# Guidance from: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
packages = ["kern_gp"]

[tool.setuptools_scm]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
python_version = 3.9  # pin modern python version
ignore_missing_imports = true

[tool.ruff]
line-length = 120
# Check https://beta.ruff.rs/docs/rules/ for full list of rules
select = [
  "E", "W",  # pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  # W605: invalid escape sequence -- triggered by pseudo-LaTeX in comments
  "W605",
  # E501: Line too long -- triggered by comments and such. black deals with shortening.
  "E501",
  # E741:  Do not use variables named 'l', 'o', or 'i' -- disagree with PEP8
  "E741",
]
